Реализация фреймов на html5

--- a/bfdLab/index.html
+++ b/bfdLab/index.html
@@ -1,20 +1,15 @@
 <!DOCTYPE html>
-<html lang=en>
+<html>
     <head>
-        <meta http-equiv="default-style" content="charset=UTF-8">
+        <meta charset="utf-8">
         <title>
             Кислицын Иван Александрович
         </title>
     </head>
-<frameset cols = "50%, 50%">
-    <frameset rows="20%, 20%, 60%">
-        <frame src="i4-1.html" name="Left1">
-        <frame src="i4-3.html" name="Left2">
-        <frame src="i4-4.html" name="Left3">
-    </frameset>
-    <frame src="i4-2.html">
-    <noframes>
-        Sorry, there is not a frame support in your browser.
-    </noframes>
-</frameset>
+<body>
+    <iframe src=1.html width="640" height="72"></iframe> 
+    <iframe src=3.html width="640" height="72"></iframe>
+    <iframe src=4.html width="640" height="575"></iframe>
+    <iframe src=2.html width="639" height="720"></iframe>
+</body>
 </html>
