--- a/bfdLab/index4.html
+++ b/bfdLab/index4.html
@@ -1,6 +1,7 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
-        <meta content="charset=utf-8">
+        <meta http-equiv="default-style" content="charset=UTF-8">
         <title>
             Кислицын Иван Александрович
         </title>
