Реализация фреймов на html5

--- a/bfdLab/index.html
+++ b/bfdLab/index.html
@@ -7,9 +7,9 @@
         </title>
     </head>
 <body>
-    <iframe src=1.html width="640" height="72"></iframe> 
-    <iframe src=3.html width="640" height="72"></iframe>
-    <iframe src=4.html width="640" height="575"></iframe>
-    <iframe src=2.html width="639" height="720"></iframe>
+    <iframe align=left src=1.html width="50%" height="60"></iframe>
+    <iframe align=right src=2.html width="49%" height="710"></iframe>
+    <iframe align=left src=3.html width="50%" height="60"></iframe>
+    <iframe align=left src=4.html width="50%" height="570"></iframe>
 </body>
 </html>
