--- a/bfdLab/i4-2.html
+++ b/bfdLab/i4-2.html
@@ -1,24 +1,24 @@
-<html>
+<html lang="en">
     <head>
     </head>
     <body>
-        <table width=100% height=90% border=4>
-            <tr>
-                <td align=center><b>Head1</b></td>
-                <td align=center>Item 1</td>
-                <td align=center>Item 2</td>
-                <td align=center>Item 3</td>
+        <table width=100% height=90% border=1>
+            <tr align=center>
+                <td><b>Head1</b></td>
+                <td>Item 1</td>
+                <td>Item 2</td>
+                <td>Item 3</td>
             </tr>
-            <tr>
-                <td align=center><b>Head2</b></td>
+            <tr align=center>
+                <td><b>Head2</b></td>
                 <td colspan="2" align=right>Item 4-5</td>
-                <td align=center>Item 6</td>
+                <td>Item 6</td>
             </tr>
-            <tr>
-                <td align=center><b>Head3</b></td>
-                <td align=center>Item 7</td>
-                <td align=center>Item 8</td>
-                <td align=center>Item 9</td>
+            <tr align=center>
+                <td><b>Head3</b></td>
+                <td>Item 7</td>
+                <td>Item 8</td>
+                <td>Item 9</td>
             </tr>
         </table>
         <p align="center"><b>Название таблицы</b></p>
