--- a/bfdLab/index.html
+++ b/bfdLab/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <title>
@@ -7,9 +7,9 @@
         </title>
     </head>
 <body>
-    <iframe align=left src=1.html width="50%" height="60"></iframe>
-    <iframe align=right src=2.html width="49%" height="710"></iframe>
-    <iframe align=left src=3.html width="50%" height="60"></iframe>
-    <iframe align=left src=4.html width="50%" height="570"></iframe>
+    <iframe src=1.html width="750" height="60"></iframe>
+    <iframe align=right src=2.html width="740" height="690"></iframe>
+    <iframe src=3.html width="750" height="60"></iframe>
+    <iframe src=4.html width="750" height="560"></iframe>
 </body>
 </html>
