--- a/bfdLab/html5/Item4-5.html
+++ b/bfdLab/html5/Item4-5.html
@@ -1,6 +1,6 @@
 <html>
     <head></head>
     <body>
-        <p align=right>Item4-5</p>
+        <pre>                                 Item4-5</pre>
     </body>
 </html>
