--- a/bfdLab/html5/nameTable.html
+++ b/bfdLab/html5/nameTable.html
@@ -1,6 +1,6 @@
 <html>
     <head></head>
     <body>
-        <p align="center"><b>Название таблицы.</b></p>
+        <pre>                                  <b>Название таблицы.</b></pre>
     </body>
 </html>
