--- a/lab2_index.html
+++ b/lab2_index.html
@@ -82,7 +82,7 @@
                         <td rowspan="4"><pre>                                              </pre></td>
                         <td rowspan="4"><img src=./image/img2.png alt="img"></td>
                         <td rowspan="4"><pre>          </pre></td>
-                        <td colspan="2"><h1>Feature 1</h1></td>
+                        <td colspan="2"><h2>Feature 1</h2></td>
                     </tr>
                     <tr>
                         <td colspan="2"><h4>Explanation of why you are going to love it<br>and the better!</h4></td></tr>
@@ -114,7 +114,7 @@
                     </tr>
                     <tr>
                         <td rowspan="4"><pre>                                              </pre></td>
-                        <td colspan="2"><h1>Feature 2</h1></td>
+                        <td colspan="2"><h2>Feature 2</h2></td>
                         <td rowspan="4"><pre>          </pre></td>
                         
                         <td rowspan="4"><img src=./image/img2.png alt="img"></td>
@@ -147,26 +147,30 @@
             <div class="Happy Customers">
                 <table>
                     <tr>
-                        <td><pre>                                                                                           </pre></td>
-                        <td><pre><h1>   Happy Customers</h1></td>
+                        <td><pre>                                                                                      </pre></td>
+                        <td><h2>Happy Customers</h2></td>
                     </tr>
                     <tr>
                         <td><pre>                                                                                           </pre></td>
-                        <td><pre><h6>       They love us! Isn't it oblivous?!</h6></td>
+                        <td><h4>They love us! Isn't it oblivous?!</h4></td>
                     </tr>
                 </table>
                 <table>
                     <tr>
                         <td><pre>                    </pre></td>
-                        <td><img src=./image/img3.png></td>
-                        <td><pre>           <img src=./image/img3.png></pre></td>
-                        <td><pre>           <img src=./image/img3.png></pre></td>
+                        <td><img src=./image/img3.png alt="img"></td>
+                        <td><pre>           </pre></td>
+                        <td><img src=./image/img3.png alt="img"></td>
+                        <td><pre>           </pre></td>
+                        <td><img src=./image/img3.png alt="img"></td>
                     </tr>
                     <tr>
                         <td><pre>                    </pre></td>
-                        <td><pre><h2>Case study 1</h2></pre></td>
-                        <td><pre><h2>       Case study 2</h2></pre></td>
-                        <td><pre><h2>       Case study 3</h2></pre></td>
+                        <td><h2>Case study 1</h2></td>
+                        <td><pre>  </pre></td>
+                        <td><h2>       Case study 2</h2></td>
+                        <td><pre>  </pre></td>
+                        <td><h2>       Case study 3</h2></td>
                     </tr>
                 </table>
             </div>
@@ -181,11 +185,13 @@
         </div>
         <div class="Call to action">
             <table>
-                    <td>
+                    <tr>
+                        <td>
                         <pre>                                                                                   </pre>
-                    </td>
-                    <td><h4>Call to action! You can do it!</h4></td>
-                    <td><fieldset><h4>Get started</h4></fieldset></td>                
+                        </td>
+                        <td><h4>Call to action! You can do it!</h4></td>
+                        <td><fieldset><h4>Get started</h4></fieldset></td>   
+                    </tr>            
             </table>
             <br>
         </div>
