--- a/lab2_index.html
+++ b/lab2_index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <header class="header">
-        <div class="header">
+        <div class="header"></div>
             <table>
                 <tr>
                     <td><pre>     </pre></td>
