--- a/index.html
+++ b/index.html
@@ -4,23 +4,165 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
-    <title>Maket</title>
-</head> 
+    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="block1.css">
+    <link rel="stylesheet" href="block2.css">
+    <link rel="stylesheet" href="block3.css">
+    <link rel="stylesheet" href="block4.css">
+    <link rel="stylesheet" href="block5.css">
+    <title>Document</title>
+</head>
 <body>
-  <div class = bg> 
-    <header>
-        <img src="./img/Logo.svg" alt="Logo" class = logo>
-        <div class=hover>
-            <img src="./img/Shape.svg" alt="Shape" class=shape>
-        </div>
-        <img src="./img/Search.svg" alt="Search" class=search>
-        <img src="./img/Foto.svg" alt="Photo" class=photo>
-        <div class=oval>
-          <p class=vos>8</p>
-        </div>
-    </header> 
-  </div>  
-    
+    <div class="bg_white">
+        <header>
+            <img src="./img/Logo.svg" alt="logo" class="logo">
+            <div class="square"><img src="./img/Shape.svg" alt="shape" class="shape"></div>
+            <img src="./img/Path.svg" alt="Path" class="Path">
+            <img src="./img/Oval.svg" alt="oval" class="oval">
+            <img src="./img/upOval.svg" alt="upOval" class="upOval"><p class ="up8">8</p>
+        </header>
+        <main>
+            <div class="block1">
+                <p class="blue"></p>
+                <ul class="menu">
+                    <li><img src="./img/Assasin;s.svg" alt="Assasin"></li>
+                    <li><img src="./img/Fantastic.svg" alt="Fantastic"></li>
+                    <li><img src="./img/Strange.svg" alt="Strange"></li>
+                    <li><img src="./img/Secret.svg" alt="Secret"></li>
+                    <li><img src="./img/WW.svg" alt="WW"></li>
+                </ul>
+                <div>
+                    <img src="img/Grad_Black.svg" alt="bg" class="bg_gr_black">
+                    <img src="./img/Red.svg" alt="Red" class="Red">
+                    <p class="Rectangle3"></p>
+                    <img src="./img/Shape2.svg" alt="Shape2" class="Shape2">
+                    <img src="./img/Shape3.svg" alt="Shape3" class="Shape3">
+                    <img src="./img/Shape4.svg" alt="Shape4" class="Shape4">
+                    <img src="./img/Shape.svg" alt="Shape" class="Ticket_Shape">
+                </div>
+                <div>
+                    <p class="next"></p>
+                    <img src="img/Next.svg" alt="Next" class="Button_Next">
+                </div>
+            </div>
+            <div class="block2">
+                <p class="Orange_line"></p>
+                <div class="JasonBourne">
+                    <img src="./img/Bourne.svg" alt="Bourne" class="Bourne">
+                    <img src="./img/Shape5.1.svg" alt="Shape5" class="Shape5">
+                    <ul class="Bourne_img">
+                        <li><img src="./img/Bourne1.svg" alt="Bourne1"></li>
+                        <li><img src="./img/Bourne2.svg" alt="Bourne2"></li>
+                        <li><img src="./img/Bourne3.svg" alt="Bourne3"></li>
+                        <li><img src="./img/Bourne4.svg" alt="Bourne4"></li>
+                        <li><img src="./img/Bourne5.svg" alt="Bourne5"></li>
+                        <li><img src="./img/Bourne6.svg" alt="Bourne6"></li>
+                    </ul>
+                    <img src="./img/Group12.svg" alt="Group12" class="Group12">
+                    <img src="./img/Group13.svg" alt="Group12" class="Group13">
+                </div>
+                <div class="JasonBourne_video">
+                    <img src="./img/JasonBourne2016.svg" alt="JasonBourne2016" class="JasonBourne2016">
+                    <p class="Shadow"></p>
+                    <p class="Play_gr"></p>
+                    <img src="./img/Next.svg" alt="Next" class="Button_play">
+                    <img src="./img/Play.svg" alt="Oval2" class="Oval2">
+                    <ul class="select">
+                        <li><img src="./img/Oval2.svg" alt="Oval2"></li>
+                        <li><img src="./img/Oval2.svg" alt="Oval2"></li>
+                        <li><img src="./img/Oval3.svg" alt="Oval3"></li>
+                        <li><img src="./img/Oval2.svg" alt="Oval2"></li>
+                        <li><img src="./img/Oval2.svg" alt="Oval2"></li>
+                        <li><img src="./img/Oval2.svg" alt="Oval2"></li>
+                        <li><img src="./img/Oval2.svg" alt="Oval2"></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="block3">
+                <ul class=menu1>
+                    <li><img src="./img/News1.svg"></li>
+                    <li><img src="./img/News2.svg"></li>
+                    <li><img src="./img/News3.svg"></li>
+                </ul>
+                <ul class="menu2">
+                    <li><img src="./img/Keanu.svg"></li>
+                    <li><img src="./img/Salma.svg"></li>
+                    <li><img src="./img/Mark.svg"></li>
+                    <li><img src="./img/Cynthia.svg"></li>
+                    <li><img src="./img/Austin.svg"></li>
+                </ul>
+                <ul class="menu3">
+                    <li><img src="./img/Daredevil.svg"></li>
+                    <li><img src="./img/Black Mirror.svg"></li>
+                    <li><img src="./img/Jessica Jones.svg"></li>
+                    <li><img src="./img/House of Cards.svg"></li>
+                    <li><img src="./img/Sense8.svg"></li>
+                </ul>
+                <ul class="menu4">
+                    <li><img src="./img/wallpapers1.svg"></li>
+                    <p class="shadow2"></p>
+                    <li><img src="./img/wallpapers2.svg"></li>
+                    <p class="shadow3"></p>
+                    <li><img src="./img/wallpapers3.svg"></li>
+                    <p class="shadow4"></p>
+                </ul>
+            </div>
+            <img src="./img/line.svg" class="line1">
+            <div class="block4">
+                <ul class="menu5">
+                    <li><img src="./img/top1.svg"></li>
+                    <li><img src="./img/top2.svg"></li>
+                    <li><img src="./img/top3.svg"></li>
+                    <li><img src="./img/top4.svg"></li>
+                    <li><img src="./img/top5.svg"></li>
+                    <li><img src="./img/top6.svg"></li>
+                </ul>
+                <div class="randommovie">
+                    <img src="./img/Guardians.svg">
+                    <p class="shadow1"></p>
+                    <img src="./img/tag1.svg" class="tag1">
+                    <img src="./img/tag2.svg" class="tag2">
+                    <img src="./img/tag3.svg" class="tag3">
+                    <img src="./img/tag4.svg" class="tag4">
+                    <img src="./img/tag5.svg" class="tag5">
+                    <img src="./img/tag6.svg" class="tag6">
+                    <div class="randombutton">
+                        <img src="./img/Arrow.svg" class="arrow">
+                    </div>                    
+                </div>
+                <ul class="menu6">
+                    <li><img src="./img/box1.svg"></li>
+                    <li><img src="./img/box2.svg"></li>
+                    <li><img src="./img/box3.svg"></li>
+                    <li><img src="./img/box4.svg"></li>
+                    <li><img src="./img/box5.svg"></li>
+                    <li><img src="./img/box6.svg"></li>
+                </ul>
+                <ul class="menu7">
+                    <li><img src="./img/recently1.svg"></li>
+                    <li><img src="./img/recently2.svg"></li>
+                    <li><img src="./img/recently3.svg"></li>
+                    <li><img src="./img/recently4.svg"></li>
+                    <li><img src="./img/recently5.svg"></li>
+                    <li><img src="./img/recently6.svg"></li>
+                    <li><img src="./img/recently7.svg"></li>
+                    <li><img src="./img/recently8.svg"></li>
+                    <li><img src="./img/recently9.svg"></li>
+                    <li><img src="./img/recently10.svg"></li>
+                    <li><img src="./img/recently11.svg"></li>
+                    <li><img src="./img/recently12.svg"></li>
+                    <li><img src="./img/recently13.svg"></li>
+                    <li><img src="./img/recently14.svg"></li>
+                    <li><img src="./img/recently15.svg"></li>
+                </ul>
+                <div class="fifty">
+                    <img src="./img/recently15.1.svg">
+                    <p class="buttonplay"></p>
+                    <img src="./img/play1.svg" class="play1">
+                </div>
+                <img src="./img/line.svg" calss="line2">
+            </div>
+    </main>
+    </div>
 </body>
 </html>
