--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="block2.css">
     <link rel="stylesheet" href="block3.css">
     <link rel="stylesheet" href="block4.css">
-    <link rel="stylesheet" href="block5.css">
+    <link rel="stylesheet" href="footer.css">
     <title>Document</title>
 </head>
 <body>
@@ -32,7 +32,10 @@
                     <li><img src="./img/WW.svg" alt="WW"></li>
                 </ul>
                 <div>
-                    <img src="img/Grad_Black.svg" alt="bg" class="bg_gr_black">
+                    <img src="img/Grad_Black.svg" alt="bg" class="bg_gr_black1">
+                    <img src="img/Grad_Black.svg" alt="bg" class="bg_gr_black2">
+                    <img src="img/Grad_Black.svg" alt="bg" class="bg_gr_black3">
+                    <img src="img/Grad_Black.svg" alt="bg" class="bg_gr_black4">
                     <img src="./img/Red.svg" alt="Red" class="Red">
                     <p class="Rectangle3"></p>
                     <img src="./img/Shape2.svg" alt="Shape2" class="Shape2">
@@ -48,6 +51,24 @@
             <div class="block2">
                 <p class="Orange_line"></p>
                 <div class="JasonBourne">
+                    <p class="txt1">Jason Bourne</p>
+                    <p class="txt2">year</p>
+                    <p class="txt3">country</p>
+                    <p class="txt4">director</p>
+                    <p class="txt5">genres</p>
+                    <p class="txt6">budget</p>
+                    <p class="txt7">duration</p>
+                    <p class="txt8">2016</p>
+                    <p class="txt9">USA</p>
+                    <p class="txt10">Paul Greengrass</p>
+                    <p class="txt11">action</p>
+                    <p class="txt12">thriller</p>
+                    <p class="txt13">$120 000 000</p>
+                    <p class="txt14">You might remember the Dell computer commercials in which a youth reports this exciting news to his friends that they are about to get their new computer by telling them.</p>
+                    <p class="txt15">123 min</p>
+                    <p class="txt1"></p>
+                    <p class="txt1"></p>
+                    <p class="txt1"></p>
                     <img src="./img/Bourne.svg" alt="Bourne" class="Bourne">
                     <img src="./img/Shape5.1.svg" alt="Shape5" class="Shape5">
                     <ul class="Bourne_img">
@@ -61,108 +82,220 @@
                     <img src="./img/Group12.svg" alt="Group12" class="Group12">
                     <img src="./img/Group13.svg" alt="Group12" class="Group13">
                 </div>
-                <div class="JasonBourne_video">
+                <div class="JasonBourne_video">                    
                     <img src="./img/JasonBourne2016.svg" alt="JasonBourne2016" class="JasonBourne2016">
                     <p class="Shadow"></p>
                     <p class="Play_gr"></p>
-                    <img src="./img/Next.svg" alt="Next" class="Button_play">
+                    <img src="img/Next.svg" alt="Next" class="Button_play">
                     <img src="./img/Play.svg" alt="Oval2" class="Oval2">
-                    <ul class="select">
-                        <li><img src="./img/Oval2.svg" alt="Oval2"></li>
-                        <li><img src="./img/Oval2.svg" alt="Oval2"></li>
-                        <li><img src="./img/Oval3.svg" alt="Oval3"></li>
-                        <li><img src="./img/Oval2.svg" alt="Oval2"></li>
-                        <li><img src="./img/Oval2.svg" alt="Oval2"></li>
-                        <li><img src="./img/Oval2.svg" alt="Oval2"></li>
-                        <li><img src="./img/Oval2.svg" alt="Oval2"></li>
-                    </ul>
+                    
+                </div>
+                <div class="paginations">
+                    <img src="./img/Dot1.svg" class="dot1" alt="Dot1">
+                    <img src="./img/Dot1.svg" class="dot2" alt="Dot2">
+                    <img src="./img/Dot2.svg" class="dot3" alt="Dot3">
+                    <img src="./img/Dot1.svg" class="dot4" alt="Dot4">
+                    <img src="./img/Dot3.svg" class="dot5" alt="Dot5">
+                    <img src="./img/Dot1.svg" class="dot6" alt="Dot6">
+                    <img src="./img/Dot1.svg" class="dot7" alt="Dot7">
                 </div>
             </div>
             <div class="block3">
-                <ul class=menu1>
-                    <li><img src="./img/News1.svg"></li>
-                    <li><img src="./img/News2.svg"></li>
-                    <li><img src="./img/News3.svg"></li>
-                </ul>
-                <ul class="menu2">
-                    <li><img src="./img/Keanu.svg"></li>
-                    <li><img src="./img/Salma.svg"></li>
-                    <li><img src="./img/Mark.svg"></li>
-                    <li><img src="./img/Cynthia.svg"></li>
-                    <li><img src="./img/Austin.svg"></li>
-                </ul>
-                <ul class="menu3">
-                    <li><img src="./img/Daredevil.svg"></li>
-                    <li><img src="./img/Black Mirror.svg"></li>
-                    <li><img src="./img/Jessica Jones.svg"></li>
-                    <li><img src="./img/House of Cards.svg"></li>
-                    <li><img src="./img/Sense8.svg"></li>
-                </ul>
-                <ul class="menu4">
-                    <li><img src="./img/wallpapers1.svg"></li>
+                <div class="Last_News">
+                    <p class="txt16">Last News</p>
+                    <p class="txt17">Top  |  Movies  |  TV  |  Celebs</p>
+                    <p class="txt18">Jared Leto Joins ‘Blade Runner’ Sequel</p>
+                    <p class="txt19">Jared Leto has joined the upcoming “Blade Runner” sequel, TheWrap has learned. See more</p>
+                    <p class="txt20">Toho to Produce First ‘Godzilla’ Animation Movie</p>
+                    <p class="txt21">Tokyo – Japan’s movie giant, Toho has announced the production of a feature-length Godzilla animation. See more</p>
+                    <p class="txt22">Watch Mysterious New 'American Horror Story' Trailer</p>
+                    <p class="txt23">Leave it to Ryan Murphy and his team from FX's terrifying American Horror Story to keep fans…See more</p>
+                    <p class="txt17"></p>
+                    <ul class="menu1">
+                        <li><img src="./img/News1.svg" alt="img"></li>
+                        <li><img src="./img/News2.svg" alt="img"></li>
+                        <li><img src="./img/News3.svg" alt="img"></li>
+                    </ul>  
+                </div>
+                <div class="Born_Today">
+                    <p class="prev">Born today</p>
+                    <ul class="menu2">
+                        <li><img src="./img/Keanu.svg" alt="img"></li>
+                        <li><img src="./img/Salma.svg" alt="img"></li>
+                        <li><img src="./img/Mark.svg" alt="img"></li>
+                        <li><img src="./img/Cynthia.svg" alt="img"></li>
+                        <li><img src="./img/Austin.svg" alt="img"></li>
+                    </ul>
+                </div>
+                <div class="See_on_Netflix">
+                    <ul class="menu3">
+                        <li><img src="./img/Daredevil.svg" alt="img"></li>
+                        <li><img src="./img/Black_Mirror.svg" alt="img"></li>
+                        <li><img src="./img/Jessica_Jones.svg" alt="img"></li>
+                        <li><img src="./img/House_of_Cards.svg" alt="img"></li>
+                        <li><img src="./img/Sense8.svg" alt="img"></li>
+                    </ul>   
+                </div>
+                <div class="Todays_Wallpapers">
+                    <ul class="menu4">
+                        <li><img src="./img/wallpapers1.svg"  alt="wallpapers"></li>
+                        <li><img src="./img/wallpapers2.svg" alt="wallpapers"></li>
+                        <li><img src="./img/wallpapers3.svg" alt="wallpapers"></li>
+                    </ul>
                     <p class="shadow2"></p>
-                    <li><img src="./img/wallpapers2.svg"></li>
                     <p class="shadow3"></p>
-                    <li><img src="./img/wallpapers3.svg"></li>
                     <p class="shadow4"></p>
-                </ul>
+                </div>
             </div>
-            <img src="./img/line.svg" class="line1">
+            <p class="line1">
             <div class="block4">
-                <ul class="menu5">
-                    <li><img src="./img/top1.svg"></li>
-                    <li><img src="./img/top2.svg"></li>
-                    <li><img src="./img/top3.svg"></li>
-                    <li><img src="./img/top4.svg"></li>
-                    <li><img src="./img/top5.svg"></li>
-                    <li><img src="./img/top6.svg"></li>
-                </ul>
-                <div class="randommovie">
-                    <img src="./img/Guardians.svg">
-                    <p class="shadow1"></p>
-                    <img src="./img/tag1.svg" class="tag1">
-                    <img src="./img/tag2.svg" class="tag2">
-                    <img src="./img/tag3.svg" class="tag3">
-                    <img src="./img/tag4.svg" class="tag4">
-                    <img src="./img/tag5.svg" class="tag5">
-                    <img src="./img/tag6.svg" class="tag6">
-                    <div class="randombutton">
-                        <img src="./img/Arrow.svg" class="arrow">
-                    </div>                    
+                <div class="Top250">
+                    <p class="b4tx16">TOP 250</p> 
+                    <p class="b4tx17">See more</p>  
+                    <p class="b4tx18">1.</p>
+                    <p class="b4tx19">The Shawshank Redemp</p>
+                    <p class="b4tx20">9.198</p>
+                    <p class="b4tx30">2.</p>
+                    <p class="b4tx31">The Green Mile</p>
+                    <p class="b4tx32">9.198</p>
+                    <p class="b4tx33">3.</p>
+                    <p class="b4tx34">Forrest Gump</p>
+                    <p class="b4tx35">9.198</p>               
+                    <p class="b4tx36">4.</p>
+                    <p class="b4tx37">Schindler's List</p>
+                    <p class="b4tx38">9.198</p>
+                    <p class="b4tx39">5.</p>
+                    <p class="b4tx40">Intouchables</p>
+                    <p class="b4tx41">9.198</p>
+                    <p class="b4tx42">6.</p>
+                    <p class="b4tx43">Inception</p>
+                    <p class="b4tx44">9.198</p>
+                    <ul class="menu5">
+                        <li><img src="./img/top1.svg" alt="top"></li>
+                        <li><img src="./img/top2.svg" alt="top"></li>
+                        <li><img src="./img/top3.svg" alt="top"></li>
+                        <li><img src="./img/top4.svg" alt="top"></li>
+                        <li><img src="./img/top5.svg" alt="top"></li>
+                        <li><img src="./img/top6.svg" alt="top"></li>
+                    </ul>
                 </div>
-                <ul class="menu6">
-                    <li><img src="./img/box1.svg"></li>
-                    <li><img src="./img/box2.svg"></li>
-                    <li><img src="./img/box3.svg"></li>
-                    <li><img src="./img/box4.svg"></li>
-                    <li><img src="./img/box5.svg"></li>
-                    <li><img src="./img/box6.svg"></li>
-                </ul>
-                <ul class="menu7">
-                    <li><img src="./img/recently1.svg"></li>
-                    <li><img src="./img/recently2.svg"></li>
-                    <li><img src="./img/recently3.svg"></li>
-                    <li><img src="./img/recently4.svg"></li>
-                    <li><img src="./img/recently5.svg"></li>
-                    <li><img src="./img/recently6.svg"></li>
-                    <li><img src="./img/recently7.svg"></li>
-                    <li><img src="./img/recently8.svg"></li>
-                    <li><img src="./img/recently9.svg"></li>
-                    <li><img src="./img/recently10.svg"></li>
-                    <li><img src="./img/recently11.svg"></li>
-                    <li><img src="./img/recently12.svg"></li>
-                    <li><img src="./img/recently13.svg"></li>
-                    <li><img src="./img/recently14.svg"></li>
-                    <li><img src="./img/recently15.svg"></li>
-                </ul>
-                <div class="fifty">
-                    <img src="./img/recently15.1.svg">
-                    <p class="buttonplay"></p>
-                    <img src="./img/play1.svg" class="play1">
+                <div class="randommovie">                    
+                    <div class="poster">
+                        <p class="b4tx23">Random Movie</p>
+                        <p class="b4tx22">Guardians of the Gal</p>
+                        <img src="./img/Guardians.svg" alt="img">
+                        <p class="shadow1"></p>
+                        <img src="./img/tag1.svg" class="tag1" alt="tag1">
+                        <img src="./img/tag2.svg" class="tag2" alt="tag1">
+                        <img src="./img/tag3.svg" class="tag3" alt="tag1">
+                        <img src="./img/tag4.svg" class="tag4" alt="tag1">
+                        <img src="./img/tag5.svg" class="tag5" alt="tag1">
+                        <img src="./img/tag6.svg" class="tag6" alt="tag1">
+                        <div class="randombutton">                            
+                            <img src="./img/Arrow.svg" class="arrow" alt="img">
+                            <p class="b4tx21">Randomize</p>
+                        </div>
+                        <p class="b4tx24">action</p>
+                        <p class="b4tx25">adventure</p>
+                        <p class="b4tx26">sci-fi</p>
+                        <p class="b4tx27">western</p>
+                        <p class="b4tx28">detective</p>
+                        <p class="b4tx29">criminal</p>
+                    </div>                
                 </div>
-                <img src="./img/line.svg" calss="line2">
+                <div class="Box_office">
+                    <p class="b4tx2">Box Office (weekend)</p>
+                    <p class="b4tx1">See more</p>
+                    <p class="b4tx3">Suicide Sqad</p>
+                    <p class="b4tx4">$43 536 013</p>
+                    <p class="b4tx5">Sausage Party</p>
+                    <p class="b4tx6">$34 263 534</p>
+                    <p class="b4tx7">Pete's Dragon</p>
+                    <p class="b4tx8">$21 514 095</p>
+                    <p class="b4tx9">Jason Bourne</p>
+                    <p class="b4tx10">$13 846 875</p>
+                    <p class="b4tx11">Bad Moms</p>
+                    <p class="b4tx12">$11 362 783</p>
+                    <p class="b4tx13">The Secret Life of P</p>
+                    <p class="b4tx14">$9 064 565</p>
+                    <ul class="menu6">
+                        <li><img src="./img/box1.svg" alt="box"></li>
+                        <li><img src="./img/box2.svg" alt="box"></li>
+                        <li><img src="./img/box3.svg" alt="box"></li>
+                        <li><img src="./img/box4.svg" alt="box"></li>
+                        <li><img src="./img/box5.svg" alt="box"></li>
+                        <li><img src="./img/box6.svg" alt="box"></li>
+                    </ul> 
+                </div>
+                <div class="Recently_ciewed">
+                    <p class="b4tx15">Recently viewed</p>
+                    <ul class="menu7">
+                        <li><img src="./img/recently1.svg" alt="recently"></li>
+                        <li><img src="./img/recently2.svg" alt="recently"></li>
+                        <li><img src="./img/recently3.svg" alt="recently"></li>
+                        <li><img src="./img/recently4.svg" alt="recently"></li>
+                        <li><img src="./img/recently5.svg" alt="recently"></li>
+                        <li><img src="./img/recently6.svg" alt="recently"></li>
+                        <li><img src="./img/recently7.svg" alt="recently"></li>
+                        <li><img src="./img/recently8.svg" alt="recently"></li>
+                        <li><img src="./img/recently9.svg" alt="recently"></li>
+                        <li><img src="./img/recently10.svg" alt="recently"></li>
+                        <li><img src="./img/recently11.svg" alt="recently"></li>
+                        <li><img src="./img/recently12.svg" alt="recently"></li>
+                        <li><img src="./img/recently13.svg" alt="recently"></li>
+                        <li><img src="./img/recently14.svg" alt="recently"></li>
+                        <li><img src="./img/recently15.svg" alt="recently"></li>
+                        <li><img src="./img/recently15.1.svg" alt="play"></li>
+                    </ul>  
+                    <div class="fifty">
+                        <p class="buttonplay"></p>
+                        <img src="./img/play1.svg" class="play1" alt="play">
+                    </div>  
+                </div> 
+                <p class="line2">
             </div>
-    </main>
+        </main>
+    <footer>
+        <div class="IMDbeverywhere">
+            <p class="t1">IMDb Everywhere</p>
+            <p class="t2">Find showtimes, watch trailers, browse photos, track your Watchlist and rate your favorite movies and TV shows on your phone or tablet!</p>
+            <p class="t3">IMDB Mobile site</p>
+            <ul class="App">
+                <li><img src="./img/Appstore.svg" alt="Appstore"></li>
+                <li><img src="./img/google-play-badge.svg" alt="google-play-badge"></li>
+                <li><img src="./img/amazon.svg" alt="amazon"></li>
+            </ul>
+        </div>
+       <div class="IMDbfollow">
+           <p class="t4">Follow us</p>
+            <ul class="follow">
+                <li><img src="./img/Facebook.svg"  alt="Facebook"></li>
+                <li><img src="./img/Instagram.svg"  alt="Instagram"></li>
+                <li><img src="./img/Youtube.svg"  alt="Yputube"></li>
+                <li><img src="./img/G+.svg"  alt="G+"></li>
+                <li><img src="./img/Twitter.svg"  alt="Twitter"></li>
+            </ul>   
+       </div>
+       <div class="Flickr">
+           <p class="t5">Flickr Gallery</p>
+            <ul class="Photos">
+                <li><img src="./img/F1.svg" alt="F1"></li>
+                <li><img src="./img/F2.svg" alt="F2"></li>
+                <li><img src="./img/F3.svg" alt="F3"></li>
+                <li><img src="./img/F4.svg" alt="F4"></li>
+                <li><img src="./img/F5.svg" alt="F5"></li>
+                <li><img src="./img/F6.svg" alt="F6"></li>
+            </ul>
+       </div>
+       <div class="Links">
+            <p class="text1">HomeTop Rated Movies Box Office TVComing Soon Site Index Search</p>
+            <p class="text2">Contact Us Message Boards Account News Press Room Advertising Jobs</p>
+            <p class="text3">IMDbPro Box Office Mojo Withoutabox Conditions of Use Privacy Policy Interest-Based Ads</p>
+       </div>
+       <div class="Amazon">
+            <img src="./img/Amazon.com-Logo.svg.svg" class="amazon_logo" alt="Logo">
+       </div>
+    </footer>
     </div>
 </body>
 </html>
