--- a/index.html
+++ b/index.html
@@ -15,11 +15,17 @@
 <body>
     <div class="bg_white">
         <header>
+            <p class="htx1">Box Office</p>
+            <p class="htx2">Media</p>
+            <p class="htx3">Ratings</p>
+            <p class="htx4">DVD & Blu-Ray</p>
+            
             <img src="./img/Logo.svg" alt="logo" class="logo">
             <div class="square"><img src="./img/Shape.svg" alt="shape" class="shape"></div>
             <img src="./img/Path.svg" alt="Path" class="Path">
             <img src="./img/Oval.svg" alt="oval" class="oval">
             <img src="./img/upOval.svg" alt="upOval" class="upOval"><p class ="up8">8</p>
+            <p class="htx5">Society</p>
         </header>
         <main>
             <div class="block1">
