--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <li><img src="./img/Strange.svg" alt="Strange"></li>
                     <li><img src="./img/Secret.svg" alt="Secret"></li>
                     <li><img src="./img/WW.svg" alt="WW"></li>
-                </ul>
+                </ul>                
                 <div>
                     <img src="img/Grad_Black.svg" alt="bg" class="bg_gr_black1">
                     <img src="img/Grad_Black.svg" alt="bg" class="bg_gr_black2">
@@ -132,17 +132,33 @@
                         <li><img src="./img/Cynthia.svg" alt="img"></li>
                         <li><img src="./img/Austin.svg" alt="img"></li>
                     </ul>
+                    <ul class="name">
+                        <li>Keanu Reeves</li>
+                        <li>Salma Hayek</li>
+                        <li>Mark Harmon</li>
+                        <li>Cynthia Watros</li>
+                        <li>Austin Abrams</li>
+                    </ul>
                 </div>
                 <div class="See_on_Netflix">
+                    <p class="Netflixtxt">See on Netflix</p>
                     <ul class="menu3">
                         <li><img src="./img/Daredevil.svg" alt="img"></li>
                         <li><img src="./img/Black_Mirror.svg" alt="img"></li>
                         <li><img src="./img/Jessica_Jones.svg" alt="img"></li>
                         <li><img src="./img/House_of_Cards.svg" alt="img"></li>
                         <li><img src="./img/Sense8.svg" alt="img"></li>
-                    </ul>   
+                    </ul>
+                    <ul class="Netflix">
+                        <li>Daredevil</li>
+                        <li>Black Mirror</li>
+                        <li>Jessica Jones</li>
+                        <li>House of Cards</li>
+                        <li>Sense8</li>
+                    </ul>  
                 </div>
                 <div class="Todays_Wallpapers">
+                    <p class="wallpapertxt">Today's wallpapers</p>
                     <ul class="menu4">
                         <li><img src="./img/wallpapers1.svg"  alt="wallpapers"></li>
                         <li><img src="./img/wallpapers2.svg" alt="wallpapers"></li>
