--- a/homepage.html
+++ b/homepage.html
@@ -18,7 +18,7 @@
       </nav>
     </div>
     
-    <img src="./image/background.svg" class="mx-auto w-full">
+    <img src="./image/background.svg" class="w-full">
     <div class="container w-940px mx-auto px-40">
         <div class="w-full mt-5 flex items-center">
           <img src="./image/search.svg" class="absolute pl-7">
@@ -220,7 +220,7 @@
               <p class="text-indigo-300 text-xl mt-12 pb-24">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
             </div>
             <div>
-              <button class="bg-blue-400 rounded-xl px-16 py-5 mr-60 mt-32 focus:outline-none">
+              <button class="bg-blue-400 rounded-xl px-16 py-5 mr-96 mt-32 focus:outline-none">
                 <p class="text-white text-xl">Let’s Talk</p>          
               </button>
             </div>        
@@ -228,7 +228,7 @@
         </div>
         <div class="bg-indigo-500">
           <div class="w-full">
-            <img src="./image/line.svg" class="bg-gray-300 w-full">
+            <img src="./image/line.svg" class="bg-gray-300 w-1073/1270">
           </div> 
           <div class="flex ml-52 mt-24">
             <div>
