--- a/contact_us.html
+++ b/contact_us.html
@@ -69,7 +69,7 @@
                       <pre class="block1"></pre>
                     </li>
                     <li class="container shadow-2xl">
-                        <ul class="registration">
+                        <ul class="registration ">
                             <li>
                                 <p class="mt-10 ml-10 text-2xl">SEND US MESSAGE</p>
                             </li>
@@ -94,15 +94,14 @@
                             </li>
                             <li class="mt-6 ml-10 mr-10">
                                 <div class="py-16 px-4 border-2 border-blue-200 rounded-xl">
-                                    <input class="w-full ml-4 focus:outline-none placeholder-gray-500 placeholder-opacity-25 " placeholder="Your Message">
+                                    <input class="w-full ml-4 focus:outline-none placeholder-gray-500 placeholder-opacity-25" placeholder="Your Message">
                                 </div>
                             </li>
                             <li class="mt-24 ml-10 mr-10">
                                 <button id="knopka" class="py-6 w-full bg-blue-400 focus:outline-none rounded-xl transition duration-500 ease-in-out hover: transform hover:-translate-y-1 hover:scale-110">
                                     <span class="text-xl text-white">SUBMIT</span>
                                 </button>
-                                <script src="script.js"></script>   
-                                
+                                <script src="script.js"></script> 
                             </li>
                         </ul>
                     </li>
@@ -112,97 +111,96 @@
                 <img src="./image/map.png" alt="map">
             </div>
         </main>
-        <footer class="mt-24 mx-auto container pr-24">
-            <div class=" bg-blue-900 rounded-tr-full">
-              <div class="flex justify-between">
-                <div class="mt-12 ml-52 max-w-lg">
-                  <p class="text-white text-6xl">Intersted to woek with our team?</p>
-                  <p class="text-indigo-300 text-xl mt-12 pb-24">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-                </div>
-                <div>
-                  <button id="knopka1" class="bg-blue-400 rounded-xl px-16 py-5 mr-72 mt-32 focus:outline-none transition duration-500 ease-in-out hover: transform hover:-translate-y-1 hover:scale-110">
-                    <span class="text-white text-xl">Let’s Talk</span>          
-                  </button>
-                  <script src="script.js"></script>   
-                  
-                </div>        
+        <footer class="container mx-auto mt-14">
+          <div class="bg-blue-900 mr-32" id="douwnfooter">
+            <div class="flex justify-between">
+              <div class="mt-12 ml-52 max-w-lg">
+                <p class="text-white text-6xl">Intersted to woek with our team?</p>
+                <p class="text-indigo-300 text-xl mt-12 pb-24">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
               </div>
+              <div>
+                <button id="knopka1" class="bg-blue-400 rounded-xl px-16 py-5 mr-72 mt-32 focus:outline-none transition duration-500 ease-in-out hover: transform hover:-translate-y-1 hover:scale-110">
+                  <span class="text-white text-xl">Let’s Talk</span>          
+                </button> 
+                <script src="script.js"></script>
+              </div>        
             </div>
-            <div class="bg-blue-900">
-              <img alt="1" src="./image/line.svg" class="bg-gray-300 w-10/12">
-              <div class="flex ml-52 mt-24">
-                <div>
-                  <div class="flex items-center">
-                    <img alt="1" src="./image/logo2.svg">
-                    <p class="text-white text-4xl ml-6">Afrianska</p>
-                  </div>
-                  <div class="mt-6">
-                    <ul>
-                      <li class="py-3">
-                        <div class="flex">
-                          <p class="text-white text-2xl">A.</p>
-                          <p class="text-white text-lg ml-4 max-w-xs">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                        </div>
-                      </li>
-                      <li class="py-3">
-                        <div class="flex">
-                          <p class="text-white text-2xl">T.</p>
-                          <p class="text-white text-lg ml-4 max-w-xs">+62-812-7313-4321</p>
-                        </div>
-                      </li>
-                      <li class="py-3">
-                        <div class="flex">
-                          <p class="text-white text-2xl">E.</p>
-                          <p class="text-white text-lg ml-4 max-w-xs">hello.afrian@gmail.com</p>
-                        </div>
-                      </li>
-                      <li class="py-16">
-                          <p class="text-gray-300 text-lg">2019 © Afrianska. All rights reserved.</p>
-                      </li>  
-                    </ul>              
-                  </div>
+          </div>
+          <div class="bg-blue-900 mr-32">
+            <img src="./image/line.svg" alt="line" class="bg-gray-300 w-10/12">
+            <div class="flex ml-52 mt-24">
+              <div>
+                <div class="flex items-center">
+                  <img src="./image/logo2.svg" alt="logo2">
+                  <p class="text-white text-4xl ml-6">Afrianska</p>
                 </div>
-                <div class="mt-4 ml-48">
+                <div class="mt-6">
                   <ul>
-                    <li>
-                      <p class="text-white text-3xl">About Us</p>
+                    <li class="py-3">
+                      <div class="flex">
+                        <p class="text-white text-2xl">A.</p>
+                        <p class="text-white text-lg ml-4 max-w-xs">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                      </div>
                     </li>
-                    <li>
-                      <p class="text-gray-300 mt-6">About</p>
+                    <li class="py-3">
+                      <div class="flex">
+                        <p class="text-white text-2xl">T.</p>
+                        <p class="text-white text-lg ml-4 max-w-xs">+62-812-7313-4321</p>
+                      </div>
                     </li>
-                    <li>
-                      <p class="text-gray-300 mt-6">What We Do</p>
+                    <li class="py-3">
+                      <div class="flex">
+                        <p class="text-white text-2xl">E.</p>
+                        <p class="text-white text-lg ml-4 max-w-xs">hello.afrian@gmail.com</p>
+                      </div>
                     </li>
-                    <li>
-                      <p class="text-gray-300 mt-6">Project</p>
-                    </li>
-                    <li>
-                      <p class="text-gray-300 mt-6">How It Work With Us</p>
-                    </li>
-                  </ul>
+                    <li class="py-16">
+                        <p class="text-gray-300 text-lg">2019 © Afrianska. All rights reserved.</p>
+                    </li>  
+                  </ul>              
                 </div>
-                <div class="mt-4 ml-48">
-                  <ul>
-                    <li>
-                      <p class="text-white text-3xl">Follow US</p>
-                    </li>
-                    <li>
-                      <p class="text-gray-300 mt-6">Instagram</p>
-                    </li>
-                    <li>
-                      <p class="text-gray-300 mt-6">Facebook</p>
-                    </li>
-                    <li>
-                      <p class="text-gray-300 mt-6">LinkedIn</p>
-                    </li>
-                    <li>
-                      <p class="text-gray-300 mt-6">YouTube</p>
-                    </li>
-                  </ul>
-                </div>
-              </div> 
-            </div>            
-          </footer>
+              </div>
+              <div class="mt-4 ml-48">
+                <ul>
+                  <li>
+                    <p class="text-white text-3xl">About Us</p>
+                  </li>
+                  <li>
+                    <p class="text-gray-300 mt-6">About</p>
+                  </li>
+                  <li>
+                    <p class="text-gray-300 mt-6">What We Do</p>
+                  </li>
+                  <li>
+                    <p class="text-gray-300 mt-6">Project</p>
+                  </li>
+                  <li>
+                    <p class="text-gray-300 mt-6">How It Work With Us</p>
+                  </li>
+                </ul>
+              </div>
+              <div class="mt-4 ml-48">
+                <ul>
+                  <li>
+                    <p class="text-white text-3xl">Follow US</p>
+                  </li>
+                  <li>
+                    <p class="text-gray-300 mt-6">Instagram</p>
+                  </li>
+                  <li>
+                    <p class="text-gray-300 mt-6">Facebook</p>
+                  </li>
+                  <li>
+                    <p class="text-gray-300 mt-6">LinkedIn</p>
+                  </li>
+                  <li>
+                    <p class="text-gray-300 mt-6">YouTube</p>
+                  </li>
+                </ul>
+              </div>
+            </div> 
+          </div>
+        </footer>
     </div>
 </body>
 </html>
