--- a/Index.html
+++ b/Index.html
@@ -23,13 +23,273 @@
   </div>
 
   <main>
-    <div class="background mx-auto">
+      <div class="bgf1 mx-auto">
+        <nav class="container flex justify-between">
+            <div class="flex">
+                <img src="img/Logo1.png" alt="Logo" class="w-10 h-10 ml-36 mt-20">
+                <p class="ml-6 mt-20 text-white text-xl">CRAPPO</p>
+            </div>
+            <div>
+                <ul class="flex space-x-6 text-white text-lg mt-20 mr-40">
+                    <li>
+                        Products
+                    </li>
+                    <li>
+                        Features
+                    </li>
+                    <li>
+                        About
+                    </li>
+                    <li>
+                        Contact
+                    </li>
+                    <li>
+                        Login
+                    </li>
+                    <li>
+                        <img src="./img/Divider.svg" alt="div">
+                    </li>
+                    <li class="-mt-4">
+                        <button onclick="knopka()" class="py-3 px-8 w-full bg-blue-500 focus:outline-none rounded-3xl transition duration-500 ease-in-out hover: transform hover:-translate-y-1 hover:scale-110">
+                            <span>Register</span>
+                        </button>
+                        <script src="script.js"></script>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <div class="mt-40 ml-32 flex">
+            <ul>
+                <li>
+                    <img src="./img/Info.svg" alt="info">
+                </li>
+                <li>
+                    <p class="text-7xl text-white mt-8 font-bold">
+                        Fastest & secure<br>
+                        platform to invest<br>
+                        in crypto
+                    </p>
+                </li>
+                <li>
+                    <p class="text-xl text-white mt-8">
+                        Buy and sell cryptocurrencies, trusted by 10M wallets<br>
+                        with over $30 billion in transactions.
+                    </p>
+                </li>
+                <li class="mt-8">
+                    <button onclick="knopka()" class="py-3  w-40 bg-blue-500 focus:outline-none rounded-3xl transition duration-500 ease-in-out hover: transform hover:-translate-y-1 hover:scale-110">
+                        <span class="flex justify-between mx-2">
+                            <p class="text-white ml-2 mt-1">Try for FREE </p>
+                            <img src="img/Arrow_Right.svg">
+                        </span>
+                    </button>
+                    <script src="script.js"></script>
+                </li>
+            </ul>
+            <img src="img/Illustration.svg" alt="ill" class="ml-6 -mt-20">
+        </div>
+        <div class="L1"></div>
+        <div class="L2"></div>
+        <div class="container mt-40 ml-36">
+            <ul class="flex space-x-24">
+                <li>
+                    <div class="flex space-x-5">
+                        <img src="./img/Icon1.svg">
+                        <ul>
+                            <li class="mt-3">
+                                <p class="text-white text-4xl font-bold">$30B</p>
+                            </li>
+                            <li class="mt-4">
+                                <p class="text-gray-400 text-lg">Digital Currency Exchanged</p>
+                            </li>
+                        </ul>
+                    </div>
+                </li>
+                <li>
+                    <div class="flex space-x-5">
+                        <img src="./img/Icon1.svg">
+                        <ul>
+                            <li class="mt-3">
+                                <p class="text-white text-4xl font-bold">10M+</p>
+                            </li>
+                            <li class="mt-4">
+                                <p class="text-gray-400 text-lg">Trusted Wallets Investor</p>
+                            </li>
+                        </ul>
+                    </div>
+                </li>
+                <li>
+                    <div class="flex space-x-5">
+                        <img src="./img/Icon1.svg">
+                        <ul>
+                            <li class="mt-3">
+                                <p class="text-white text-4xl font-bold">195</p>
+                            </li>
+                            <li class="mt-4">
+                                <p class="text-gray-400 text-lg">Countries Supported</p>
+                            </li>
+                        </ul>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <div class="container mt-60 flex">
+            <img src="./img/Illustrations.svg" alt="ill2" class="ml-16 -mt-20">
+            <ul class="ml-20">
+                <li class="text-white text-4xl font-bold">
+                    Why you should choose<br>
+                    CRAPPO
+                </li>
+                <li class="text-gray-400 text-xl mt-10">
+                    Experience the next generation cryptocurrency<br>
+                    platform. No financial borders, extra fees, and fake<br>
+                    reviews.
+                </li>
+                <li class="mt-8">
+                    <button onclick="knopka()" class="py-3  w-40 bg-blue-500 focus:outline-none rounded-3xl transition duration-500 ease-in-out hover: transform hover:-translate-y-1 hover:scale-110">
+                        <span class="flex justify-between mx-2">
+                            <p class="text-white ml-8">Learn More</p>
+                        </span>
+                    </button>
+                    <script src="script.js"></script>
+                </li>
+            </ul>
+        </div>
+        <img src="./img/D.svg" class="D" alt="D">
+        <img src="./img/u.svg" class="U" alt="U">
+        <div class="L3"></div>
+        <div class="container mt-40 mx-auto">
+            <p class="text-white text-5xl font-bold text-center">Check how much you can earn</p>
+            <p class="text-center text-white text-xl text-gray-400 mt-10">Let’s check your hash rate to see how much you will earn today,<br> Exercitation veniam consequat sunt nostrud amet.</p>
+        </div>
+        <div class="bg-white rounded-2xl mx-52 mt-20 py-14 shadow-2xl">
+            <ul class="space-x-5 flex justify-between  ml-10">
+                <li>
+                    <div>
+                        <p class="text-2xl font-medium">Enter your hash rate</p>
+                        <img src="./img/Form.svg">
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <div class="flex">
+                            <p class="text-2xl font-medium">TH/s</p>
+                            <img src="img/Arrow_Down.svg" alt="arr" class="ml-32">
+                        </div>
+                        
+                        <img src="./img/Form1.svg">
+                    </div>
+                </li>
+                <li>
+                    <button onclick="knopka()" class="py-3 -mt-12 mr-8 w-40 bg-blue-500 focus:outline-none rounded-3xl transition duration-500 ease-in-out hover: transform hover:-translate-y-1 hover:scale-110">
+                        <span class="text-white">Calculate</span>
+                    </button>
+                    <script src="script.js"></script>
+                </li>
+            </ul>
+            <ul class="mt-36 ml-10">
+                <li class="text-xl text-blue-500 font-bold">
+                    ESTIMATED 24 HOUR REVENUE:
+                </li>
+                <li class="text-4xl font-bold mt-8">
+                    <div class="flex">
+                        <p>0.055 130 59 ETH</p>
+                        <p class="text-blue-500 ml-2">($1275)</p>
+                    </div>
+                </li>
+                <li class="text-lg text-gray-400 mt-6">
+                    Revenue will change based on mining difficulty and Ethereum price.
+                </li>
+            </ul>
+        </div>
+        <div class="BG2">
+            <div class="container text-center text-5xl font-bold mt-40">
+                Trade securely and market the high<br> growth cryptocurrencies.
+            </div>
+            <div class="container mt-20 flex space-x-20">
+                <div class="container rounded-2xl bg-indigo-900">
+                    <ul class="items-center mt-10 ml-10">
+                        <li class="ml-32">
+                            <img src="./img/Bit1.svg" alt="Bit">                        
+                        </li>
+                        <li class="mt-14 ml-28">
+                            <div class="flex">
+                                <p class="text-3xl text-white font-bold">Bitcoin</p>
+                                <p class="text-xl text-gray-400 ml-2">BTC</p>
+                            </div>
+                        </li>
+                        <li class="text-lg -ml-8 mt-6 text-center text-white">
+                            Digital currency in which a record of<br> transactions is maintained.
+                        </li>
+                        <li class="mt-12 ml-20">
+                            <button onclick="knopka()" class="py-3  w-40 bg-blue-500 focus:outline-none rounded-3xl transition duration-500 ease-in-out hover: transform hover:-translate-y-1 hover:scale-110">
+                                <span class="flex justify-between mx-2">
+                                    <p class="text-white ml-2 mt-1">Start mining</p>
+                                    <img src="img/Arrow_Right.svg">
+                                </span>
+                            </button>
+                            <script src="script.js"></script>
+                        </li>
+                    </ul>
+                </div>
+                <div class="container rounded-2xl shadow-2xl">
+                    <ul class="items-center mt-10 ml-10">
+                        <li class="ml-32">
+                            <img src="./img/diamond.svg" alt="diamond">
+                        </li>
+                        <li class="mt-14 ml-24">
+                            <div class="flex">
+                                <p class="text-3xl font-bold">Ethereum</p>
+                                <p class="text-xl text-gray-400 ml-2">ETH</p>
+                            </div>
+                        </li>
+                        <li class="text-lg -ml-8 mt-8 text-center text-gray-400">
+                            Blockchain technology to create and run<br> decentralized digital applications.
+                        </li>
+                        <li class="mt-10 ml-36">
+                            <button onclick="knopka()" class="w-40  focus:outline-none">
+                                <span>
+                                    <img src="img/next.svg">
+                                </span>
+                            </button>
+                            <script src="script.js"></script>
+                        </li>
+                    </ul>
+                </div>
+                <div class="container rounded-2xl shadow-2xl">
+                    <ul class="items-center mt-10 ml-10">
+                        <li class="ml-32">
+                            <img src="./img/L.svg" alt="diamond">
+                        </li>
+                        <li class="mt-14 ml-28">
+                            <div class="flex">
+                                <p class="text-3xl font-bold">Litecoin</p>
+                                <p class="text-xl text-gray-400 ml-2">LTC</p>
+                            </div>
+                        </li>
+                        <li class="text-lg -ml-8 mt-8 text-center text-gray-400">
+                            Cryptocurrency that enables instant<br> payments to anyone in the world.
+                        </li>
+                        <li class="mt-10 ml-36">
+                            <button onclick="knopka()" class="w-40  focus:outline-none">
+                                <span>
+                                    <img src="img/next.svg">
+                                </span>
+                            </button>
+                            <script src="script.js"></script>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+      </div>    
+    <div class="background mx-auto mt-48">
         <img src="./img/oval.svg" class="oval" alt="1">
         <p class="text-white text-center pt-16 text-4xl w-3xl txt1">Market sentiments, portfolio, and run<br> the infrastructure of your choice</p>
         <div class="pl-32 flex justify-between mt-16">
             <div>
                 <p class="text-3xl text-white txt1">Invest Smart</p>
-                <p class="text-gray-100 mt-6">Get full statistic information about the behaviour of<br> buyers and sellers will help you to make the decision.</p>
+                <p class="text-gray-100">Get full statistic information about the behaviour of<br> buyers and sellers will help you to make the decision.</p>
                 <button class="mt-8 focus:outline-none" onclick="knopka()"><span class="txt1 text-white py-4 px-8 bg-blue-500 rounded-full">Learn More</span></button>
             </div>
             <div>
@@ -69,7 +329,6 @@
                 <p class="txt1 text-white text-2xl">Detailed Statistics</p>
                 <p class="text-gray-200 mt-6">View all mining related information in realtime, at any<br>point at any location and decide which polls you want<br>to mine in.</p>
                 <button class="mt-8 focus:outline-none" onclick="knopka()"><span class="txt1 text-white py-4 px-8 bg-blue-500 rounded-full">Learn More</span></button>
-                <script type="text/javascript" src="script.js"></script>
             </div>
         </div>
         <div class="mt-24 mx-24 items-center flex justify-between">
@@ -77,7 +336,6 @@
                 <p class="text-white txt1 text-3xl">Grow your profit and track<br>your investments</p>
                 <p class="text-gray-200 mt-8">Use advanced analytical tools. Clear TradingView<br>charts let you track current and historical profit<br>investments.</p>
                 <button class="mt-8 focus:outline-none" onclick="knopka()"><span class="txt1 text-white py-4 px-8 bg-blue-500 rounded-full">Learn More</span></button>
-                <script type="text/javascript" src="script.js"></script>
             </div>
             <div class="table">
                 <div class="flex space-x-20 ml-48">
@@ -144,7 +402,6 @@
                 <img src="./img/line.svg" alt="1">
             </div>
             <button class="focus:outline-none ml-16" onclick="knopka()"><span class="txt1 text-gray-900 py-4 px-10 bg-white rounded-full">Subscribe</span></button>
-            <script type="text/javascript" src="script.js"></script>
             
         </div>
     </div>
